# MITK

Modules/: CMakeLists.txt
Modules/EndoscopyCalibration/: CMakeLists.txt  files.cmake
Modules/EndoscopyCalibration/CalibrationController/: mitkEndoscopyController.cpp  mitkEndoscopyController.h
Modules/EndoscopyCalibration/Datastructure/: mitkChessboardPoints.cpp  mitkChessboardPoints.h  mitkMeasurementsPoint.cpp  mitkMeasurementsPoint.h  mitkMeasurementsPoints.cpp  mitkMeasurementsPoints.h
Modules/EndoscopyCalibration/Testing/: files.cmake
Modules/IGT/TrackingDevices/: mitkClaronInterface.h
Modules/OpenCVVideoSupport/: mitkOpenCVVideoSource.h
Modules/OpenCVVideoSupport/UI/: QmitkOpenCVVideoControls.cpp
Modules/Python/: mitkPythonService.cpp
Plugins/: PluginList.cmake
Plugins/org.mitk.gui.qt.aruco/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/org.mitk.gui.qt.aruco/TestData/aruco_testproject/: aruco_simple.cpp
Plugins/org.mitk.gui.qt.aruco/TestData/aruco_testproject/TestData/: out_camera_data.xml
Plugins/org.mitk.gui.qt.aruco/documentation/UserManual/: Manual.dox
Plugins/org.mitk.gui.qt.aruco/documentation/doxygen/: modules.dox
Plugins/org.mitk.gui.qt.aruco/src/: mitkArUcoTool.cpp  mitkArUcoTool.h  mitkArUcoTrackingDevice.cpp  mitkArUcoTrackingDevice.h
Plugins/org.mitk.gui.qt.aruco/src/internal/: ArucoTestView.cpp  ArucoTestView.h  ArucoTestViewControls.ui  org_mitk_gui_qt_aruco_Activator.cpp  org_mitk_gui_qt_aruco_Activator.h
Plugins/org.mitk.gui.qt.endoscopycalibration/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/org.mitk.gui.qt.endoscopycalibration/documentation/UserManual/: Manual.dox
Plugins/org.mitk.gui.qt.endoscopycalibration/documentation/doxygen/: modules.dox
Plugins/org.mitk.gui.qt.endoscopycalibration/resources/: NDI_Probe_X_Medium.rom  NDI_Probe_Y_Large.rom  NERVEHOOK_Y.stl  NERVEHOOK_x.stl  QmitkEndoscopyCalibrationView.qrc  Titan_roundedTool.rom  icon.xpm  largetool.stl  mediumtool.stl  nervehook_X_Resized.stl  nervehook_Y_Resized.stl  newToolTitan.rom  newToolTitan2.rom  newTrackingTool2.stl  newTrackingTool2s.stl  roundedTrackingTool.stl  roundedTrackingTool_Resized.stl  titan_nervehook_X.rom  titan_nervehook_Y.rom
(+11 files in other folders)
